--- a/pages/entidadesacademicas.html
+++ b/pages/entidadesacademicas.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+    name="description"
+    content="Despejá tus dudas sobre el proceso de admisión y oportunidades internacionales"
+  />
+  <meta
+    name="keywords"
+    content="Universidades, Beginning, carreras, planes de estudios, promociones"
+  />
     <!--Link Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" /> 
-    <link rel="stylesheet"  href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="../multimedia/logo.png" type="image/x-icon">  
+     <!--Link Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+zJ3awMfo5z2kayef+tO7I5ktDkhepd2jcLMb0W" crossorigin="anonymous">
     <title>Entidades Académicas</title>
 </head>
 <body>
@@ -92,7 +102,7 @@
     <footer>
         <h2>Beginning - Todos los derechos reservados</h2>
         <div class="footer-icons">
-          <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>  
+          <a href="https://github.com/ezemnunez" target="_blank"><i class="fab fa-github"></i></a>  
           <a href="https://www.linkedin.com/home" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://gmail.com/" target="_blank"><i class="far fa-envelope"></i></a>
         </div>
