--- a/pages/entidadesacademicas.html
+++ b/pages/entidadesacademicas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
     name="description"
-    content="Despejá tus dudas sobre el proceso de admisión y oportunidades internacionales"
+    content="Despejá tus dudas sobre el proceso de admisión y oportunidades academicas"
   />
   <meta
     name="keywords"
