--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--Titulo y párrafo principal-->
         <div class="call">
             <h1 class="titulo-principal">Elige mejor con Beginning</h1>
-            <p class="parrafo-principal">Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque fugiat natus perspiciatis maxime consectetur soluta mollitia doloribus voluptas ratione libero odit dolorem numquam, sequi omnis nulla? Vero, voluptatibus quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque fugiat natus perspiciatis maxime consectetur soluta mollitia doloribus voluptas ratione libero odit dolorem numquam, sequi omnis nulla? Vero, voluptatibus quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque fugiat natus perspiciatis maxime consectetur soluta mollitia doloribus voluptas ratione libero odit dolorem numquam, sequi omnis nulla? Vero, voluptatibus quas.</p>
+            <p class="parrafo-principal">Somos una empresa que nos encargamos de brindar servicio a todas aquellas personas interesadas en expandir su desarrollo academico. Buscamos alinear tus objetivos profesionales con la mejor oferta academica del mercado en base a tus intereses y posibilidades.</p>
         </div>
         <div class="container-video">
             <!--Video-->
